--- a/Assets/css/sticky-footer-navbar.css
+++ b/Assets/css/sticky-footer-navbar.css
@@ -1,37 +1,43 @@
 /* Sticky footer styles
 -------------------------------------------------- */
+
 html {
     position: relative;
     min-height: 100%;
-  }
-  body {
+}
+
+body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
-  }
-  .footer {
+}
+
+.footer {
     position: absolute;
     bottom: 0;
     width: 100%;
     /* Set the fixed height of the footer here */
     height: 60px;
-    line-height: 60px; /* Vertically center the text there */
+    line-height: 60px;
+    /* Vertically center the text there */
     background-color: #f5f5f5;
-  }
-  
-  
-  /* Custom page CSS
+}
+
+
+/* Custom page CSS
   -------------------------------------------------- */
-  /* Not required for template or sticky footer method. */
-  
-  body > .container {
+
+
+/* Not required for template or sticky footer method. */
+
+body>.container {
     padding: 60px 15px 0;
-  }
-  
-  .footer > .container {
+}
+
+.footer>.container {
     padding-right: 15px;
     padding-left: 15px;
-  }
-  
-  code {
+}
+
+code {
     font-size: 80%;
-  }
+}
