updated portfolio page. added images of projects, links, buttons, resume, added name to contact page, and more

--- a/Assets/css/jdh_style.css
+++ b/Assets/css/jdh_style.css
@@ -1,6 +1,6 @@
 .Catamaran {
     font-family: 'Catamaran', sans-serif;
-    text-decoration: none;
+    /* text-decoration: none; */
 }
 
 .jumbotron {
@@ -30,6 +30,10 @@ main.container {
 
 a:hover {
     text-decoration: none;
+}
+
+img {
+    /* border: thin lightgray solid */
 }
 
 .linkedin {
@@ -102,4 +106,29 @@ a:hover {
 
 html {
     min-height: 960px;
+}
+
+.poFoImg {
+    border: thin lightgrey solid;
+    margin-bottom: 20px;
+}
+
+.poFoLinks {
+    font-size: 10pt;
+    font-weight: 510;
+    color: #343A40;
+    /* background-color: #09A7D8; */
+    padding: 15px;
+    /* border: thin rgb(228, 228, 228) solid; */
+    /* border-radius: 5px; */
+    margin: 30px;
+}
+
+.poFoLinks:hover {
+    text-decoration: underline;
+    color: black;
+}
+
+.noShow {
+    display: none;
 }
