--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+main.container {
+  padding-bottom: 120px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+html {
+  min-height: 960px;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+.Catamaran {
+  font-family: 'Catamaran', sans-serif;
+  /* text-decoration: none; */
+}
+
+main {
+  font-family: 'Roboto', sans-serif;
+}
+
+.noShow {
+  display: none;
 }
